Fix text wrapping on pre

--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ body {
   font-weight: 100;
   word-wrap: break-word;
   word-break: break-all;
+  white-space: pre-wrap;
   font-family: 'Roboto', sans-serif;
   margin: 0px;
 }
